feat: added 2 child components, one is not a HOC with memoization, the other one will use composed props (tbc)

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.chip-input {
+  margin: 0 8px 16px 0;
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+
+}
