--- a/src/shared/styles.scss
+++ b/src/shared/styles.scss
@@ -12,16 +12,9 @@
   border: 1px solid #bbb;
   padding: 4px 8px;
   border-radius: 8px;
-}
-
-.light .chip {
-  background-color: #aaa; // #f9f9f9;
-  color: #333;
-}
-
-.dark .chip {
-  background-color: #333;
-  color: #f9f9f9;
+  // Use of CSS variables from component for theming with CSS modules
+  background-color: var(--chip-bg, #ffffff);
+  color: var(--chip-color, #333);
 }
 
 .empty {
